-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.2
-
mac cocoa
-
-
b271ddebfcda26839a02705f17e287a4686f36fb
if two application is open side by side only the window which is active gets right click event and shows context menu the other which is not active does not get any event unless you do left click on that get it active.
This is behavior change in Qt5 and also against the mac native behavior.
To reproduce: open two instance of any Qt5 based example which has context menu and keep both of them shown on screen and then using usb mouse right click on window to show context menu.
experience only window is active shows context menu